Change color to fix visibility issue of project progress on overview page.

--- a/css/admin.less
+++ b/css/admin.less
@@ -486,7 +486,7 @@ ul.cpm-activity {
             .text {
                 font-size: 8px;
                 margin-top: -23px;
-                color: #fff;
+                color: #222;
                 text-shadow: none;
             }
         }
